# src/db/drizzle/schema/chat/schema.ts
@@ -8,6 +8,7 @@ import {
 } from 'drizzle-orm/pg-core';
 import { baseSchema } from '../base.schema';
 import { users } from '../user/schema';
+import { model } from '../model/schema';
 
 export const statusEnum = pgEnum('status_enum', [
   'ACTIVE',
@@ -17,24 +18,15 @@ export const statusEnum = pgEnum('status_enum', [
 
 export const messageRoleEnum = pgEnum('message_role_enum', ['user', 'system']);
 
-export const model = pgTable('model', {
-  ...baseSchema,
-  name: varchar('name', { length: 255 }).notNull(),
-  description: varchar('description', { length: 255 }).notNull(),
-  token_cost: integer('token_cost')
-    .notNull()
-    .$defaultFn(() => 0.2),
-  api_link: varchar('api_link', { length: 255 }).notNull(),
-  auth_token: varchar('auth_token', { length: 255 }),
-});
-
 export const chat = pgTable('chat', {
   ...baseSchema,
   userUid: uuid('user_uid').references(() => users.uid),
-  modelUid: uuid('model_uid').references(() => model.uid),
   total_token_used: integer('total_token_used').$default(() => 0),
   total_credit_spent: integer('total_credit_spent').$default(() => 0),
 });
+
+export type InsertChat = typeof chat.$inferInsert;
+export type SelectChat = typeof chat.$inferSelect;
 
 export const message = pgTable('message', {
   ...baseSchema,
@@ -42,7 +34,11 @@ export const message = pgTable('message', {
   message: text('message').notNull(),
   chatUid: uuid('chat_uid').references(() => chat.uid),
   session_uid: uuid('session_uid').references(() => generationSession.uid),
+  modelUid: uuid('model_uid').references(() => model.uid),
 });
+
+export type InserMessage = typeof message.$inferInsert;
+export type SelectMessage = typeof message.$inferSelect;
 
 export const generationSession = pgTable('generation_session', {
   ...baseSchema,
@@ -51,3 +47,6 @@ export const generationSession = pgTable('generation_session', {
   status: statusEnum('status').notNull(),
   message_uid: uuid('message_uid').references(() => message.uid),
 });
+
+export type InsertGenearationSession = typeof generationSession.$inferInsert;
+export type SelectGenearationSession = typeof generationSession.$inferSelect;
