# src/modules/user/user.routes.ts
@@ -1,8 +1,21 @@
 import { Router } from 'express';
-import * as UserController from './user.controller';
+import * as userController from './user.controller';
 import { isAuthenticated } from '@/middleware/auth.middleware';
 const router = Router();
 
-router.get('/profile', isAuthenticated, UserController.getUserProfile);
+router.get('/profile', isAuthenticated, userController.getUserProfile);
+router.get('/transactions/all', isAuthenticated, userController.getUserProfile);
+router.get('/transactions/my', isAuthenticated, userController.getUserProfile);
+router.get(
+  '/transactions/info/:transactionUid',
+  isAuthenticated,
+  userController.getUserProfile
+);
+
+router.post(
+  '/transaction/make',
+  isAuthenticated,
+  userController.createTransaction
+);
 
 export default router;
